--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <hr>
     </main>
     <footer>
-        &copy; Anjelika Beksultanova, 2020 <br>
+        &copy; 2020 <br>
         <a href="https://linktr.ee/jyldyzacademy2020">Jyldyz Academy</a>
     </footer>
 </body>
