started to update

--- a/index.html
+++ b/index.html
@@ -6,33 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My сurriculum vitae</title>
+    <link rel="stylesheet" href="style.csss">
 </head>
 
 <body>
-    <header>
-        <a href="#home">AnjelikaBeksultanova</a>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#home">Home</a>
+    <header class="header">
+        <nav class="header-navigation">
+            <a id="logo" class="header-logo" href="#home">AnjelikaBeksultanova</a>
+            <ul class="menu">
+                <li class="menu-item">
+                    <a class="menu-link" href="#home">Home</a>
                 </li>
-                <li>
-                    <a href="#about">About me</a>
+                <li class="menu-item">
+                    <a class="menu-link" href="#about">About me</a>
                 </li>
-                <li>
-                    <a href="#skills">Skills</a>
+                <li class="menu-item">
+                    <a class="menu-link" href="#skills">Skills</a>
                 </li>
-                <li>
-                    <a href="#education">Education</a>
+                <li class="menu-item">
+                    <a class="menu-link" href="#education">Education</a>
                 </li>
-                <li>
-                    <a href="#languages">Languages</a>
+                <li class="menu-item">
+                    <a class="menu-link" href="#languages">Languages</a>
                 </li>
-                <li>
-                    <a href="#example">Code example</a>
+                <li class="menu-item">
+                    <a class="menu-link" href="#example">Code example</a>
                 </li>
-                <li>
-                    <a href="#contact">Contact</a>
+                <li class="menu-item">
+                    <a class="menu-link" href="#contact">Contact</a>
                 </li>
             </ul>
         </nav>
