--- a/index.html
+++ b/index.html
@@ -6,36 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My сurriculum vitae</title>
-    <link rel="stylesheet" href="style.csss">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header class="header">
         <nav class="header-navigation">
-            <a id="logo" class="header-logo" href="#home">AnjelikaBeksultanova</a>
-            <ul class="menu">
-                <li class="menu-item">
-                    <a class="menu-link" href="#home">Home</a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-link" href="#about">About me</a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-link" href="#skills">Skills</a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-link" href="#education">Education</a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-link" href="#languages">Languages</a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-link" href="#example">Code example</a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-link" href="#contact">Contact</a>
-                </li>
-            </ul>
+            <div class="container">
+                <a id="logo" class="header-logo" href="#home">AB</a>
+                <ul class="menu">
+                    <li class="menu-item">
+                        <a class="menu-link" href="#home">Home</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link" href="#about">About me</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link" href="#skills">Skills</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link" href="#education">Education</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link" href="#languages">Languages</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link" href="#example">Code example</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
         <img width="200" src="./img/photo.jpg" alt="logo">
     </header>
