--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                                 <a class="menu-link" href="#example">Code example</a>
                             </li>
                             <li class="menu-item">
+                                <a class="menu-link" href="#portfolio">Portfolio</a>
+                            </li>
+                            <li class="menu-item">
                                 <a class="menu-link" href="#contact">Contact</a>
                             </li>
                         </ul>
@@ -61,7 +64,7 @@
             <div class="bg-color-blue">
                 <div class="container padding">
                     <h1 class="section-title white center">Skills:</h1>
-                    <ul class="menu gap padding-top">
+                    <ul class="menu menu2 gap padding-top">
                         <li class="skills-menu-item">Html</li>
                         <li class="skills-menu-item">Css</li>
                         <li class="skills-menu-item">SASS, Scss</li>
@@ -125,22 +128,47 @@
                 </div>
             </div>
         </section>
-        <section id="contact">
+        <section id="portfolio">
             <div class="bg-color-blue">
                 <div class="container padding">
-                    <h2 class="section-title white center">Contact</h2>
+                    <h1 class="section-title white center">Portfolio</h1>
+                    <ul class="portfolio-menu menu2 padding-top">
+                        <li class="portfolio-menu-item">
+                            <img src="./img/Без имени-1.jpg" alt="item-img" class="item-img">
+                            <p class="item-title">Explore and Travel</p>
+                            <a href="https://beksultanova.github.io/exploreTour/#home" target="_blank" class="item-link">View project</a>
+                        </li>
+                        <li class="portfolio-menu-item">
+                            <img src="./img/Без имени-2.jpg" alt="item-img" class="item-img">
+                            <p class="item-title">Alivio</p>
+                            <a href="https://beksultanova.github.io/alivio/" target="_blank" class="item-link">View project</a>
+                        </li>
+                        <li class="portfolio-menu-item">
+                            <img src="./img/Без имени-3.jpg" alt="item-img" class="item-img">
+                            <p class="item-title">Denis Novik
+                            </p>
+                            <a href="https://beksultanova.github.io/denisNovik/" target="_blank" class="item-link">View project</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section id="contact">
+            <div class="bg-color-white">
+                <div class="container padding">
+                    <h2 class="section-title blue center">Contact</h2>
                     <ul class="contact padding-top">
                         <li>
-                            <h3>Location</h3>
-                            <p>Osh, Kyrgyzstan</p>
+                            <h3 class="blue">Location</h3>
+                            <p class="blue">Osh, Kyrgyzstan</p>
                         </li>
                         <li>
-                            <h3>Phone number</h3>
-                            <p><a class="white" href="tel:+996999090966">+996 999 09 09 66</a></p>
+                            <h3 class="blue">Phone number</h3>
+                            <p><a class="blue" href="tel:+996999090966">+996 999 09 09 66</a></p>
                         </li>
                         <li>
-                            <h3>Email</h3>
-                            <p><a class="white" href="mailto:anjelika.beksultanova.kk@gmail.com">anjelika.beksultanova.kk@gmail.com</a></p>
+                            <h3 class="blue">Email</h3>
+                            <p><a class="blue" href="mailto:anjelika.beksultanova.kk@gmail.com">anjelika.beksultanova.kk@gmail.com</a></p>
                         </li>
                     </ul>
                 </div>
@@ -148,10 +176,10 @@
         </section>
     </main>
     <footer>
-        <div class="bg-color-white">
+        <div class="bg-color-blue">
             <div class="container">
                 <div class="content">
-                    <p class="blue center">&copy; 2022 <br></p>
+                    <p class="white center">&copy; 2022 <br></p>
                 </div>
             </div>
         </div>
